@@ -20,6 +20,7 @@ S3method(nbrOfWorkers,"NULL")
 S3method(nbrOfWorkers,cluster)
 S3method(nbrOfWorkers,future)
 S3method(nbrOfWorkers,multiprocess)
+S3method(nbrOfWorkers,parallel)
 S3method(nbrOfWorkers,sequential)
 S3method(plot,Mandelbrot)
 S3method(print,Future)
